--- a/ListaDeHoteles/Views/ListaHotelesView.xaml
+++ b/ListaDeHoteles/Views/ListaHotelesView.xaml
@@ -50,7 +50,7 @@
 
 
 
-        <CollectionView Grid.Row="1"  HorizontalOptions="Center" ItemsSource="{Binding ListaHoteles}" ItemSizingStrategy="MeasureAllItems" Margin="0,30,0,0">
+        <CollectionView Grid.Row="1"  HorizontalOptions="Center" ItemsSource="{Binding ListaHoteles}" ItemSizingStrategy="MeasureAllItems" Margin="0,15,0,0">
 
             <CollectionView.ItemsLayout>
                 <LinearItemsLayout Orientation="Horizontal"></LinearItemsLayout>
@@ -83,27 +83,30 @@
                             </Grid.GestureRecognizers>
 
                             <Grid.RowDefinitions>
-                                <RowDefinition Height=".8*"></RowDefinition>
+                                <RowDefinition Height=".1*"></RowDefinition>
+                                <RowDefinition Height=".7*"></RowDefinition>
                                 <RowDefinition Height=".2*"></RowDefinition>
                             </Grid.RowDefinitions>
 
 
 
-                            <Image Aspect="AspectFit" Source="{Binding Imagen}" HorizontalOptions="Center" WidthRequest="390" Margin="20,10,20,0" HeightRequest="200"></Image>
+                            <Image Grid.Row="1" Aspect="AspectFill" Source="{Binding Imagen}" HorizontalOptions="Center" WidthRequest="390" Margin="20,10,20,0" HeightRequest="100"></Image>
 
 
-                            <Frame Background="#F77E21" Margin="20,320,95,-10" Padding="15" CornerRadius="15" HeightRequest="100">
-                                <Label Grid.Row="1" Text="{Binding Nombre}"  HorizontalTextAlignment="Start" HorizontalOptions="Center" VerticalOptions="Center" TextColor="White" FontSize="Large" VerticalTextAlignment="Start"></Label>
+                            <Frame Background="#F77E21"  CornerRadius="15" HeightRequest="150" Grid.Row="2" Margin="20,10,20,0" Padding="10">
+                                <!--Margin="20,320,95,-10"--> <!--Padding="15"-->
+                                <Label  Text="{Binding Nombre}" HorizontalTextAlignment="Start" HorizontalOptions="Center" VerticalOptions="Center" TextColor="White" FontSize="Large" VerticalTextAlignment="Start"></Label>
                             </Frame>
 
 
                           
 
-                            <Image Margin="150,0,20,320">
+                            <Image Grid.Row="0">
                                 <Image.Style>
                                     <Style TargetType="Image">
-                                        <Setter Property="WidthRequest" Value="100"></Setter>
-                                        <Setter Property="HorizontalOptions" Value="EndAndExpand"></Setter>
+                                        <Setter Property="HeightRequest" Value="100"></Setter>
+                                        <Setter Property="HorizontalOptions" Value="Center"></Setter>
+                                        <Setter Property="Aspect" Value="AspectFit"></Setter>
                                         <Style.Triggers>
                                             <DataTrigger TargetType="Image" Binding="{Binding Estrellas}" Value="5">
                                                 <Setter Property="Source" Value="i991986"></Setter>
